Fix hidden scrollbar in rules section

--- a/styles/slideshow.css
+++ b/styles/slideshow.css
@@ -14,7 +14,7 @@
   scrollbar-width: none;
 }
 
-::-webkit-scrollbar {
+.slideshow-container::-webkit-scrollbar {
   display: none;
 }
 
